unpackaged/main/default/objects/Outbound_Communications__c/Outbound_Communications__c.object-meta.xml
<CustomObject>
    <description>This object is used to manage the settings of our drip campaign automations.</description>
    <label>Outbound Communication</label>
    <nameField>
        <label>Outbound Communications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>