unpackaged/main/default/objects/Outbound_Communications__c/fields/Active_For_Testing__c.field-meta.xml
<CustomField>
    <fullName>Active_For_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, and the user who is triggering this communication is a testing user, then this rule will be applied.  The Active field will override this field.</description>
    <inlineHelpText>If checked, and the user who is triggering this communication is a testing user, then this rule will be applied.  The Active field will override this field.</inlineHelpText>
    <label>Active For Testing</label>
    <type>Checkbox</type>
</CustomField>