unpackaged/main/default/objects/Outbound_Communications__c/fields/Applies_to_all_Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_all_Case_Types__c</fullName>
    <formula>ISBLANK( Case_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applies to all Case Types?</label>
    <type>Checkbox</type>
</CustomField>