unpackaged/main/default/objects/Outbound_Communications__c/fields/BCC__c.field-meta.xml
<CustomField>
    <fullName>BCC__c</fullName>
    <inlineHelpText>Comma-separated list of email values</inlineHelpText>
    <label>BCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>