unpackaged/main/default/objects/Outbound_Communications__c/fields/Call_Count_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Count_API_Name__c</fullName>
    <label>Call Count API Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open_and_Working_Status_Calls__c</fullName>
            </value>
            <value>
                <fullName>Referred_Out_Calls__c</fullName>
            </value>
            <value>
                <fullName>E_sign_Retainer_Sent_Calls__c</fullName>
            </value>
            <value>
                <fullName>Mail_Retainer_Sent_Calls__c</fullName>
            </value>
            <value>
                <fullName>Case_Verification_Calls__c</fullName>
            </value>
            <value>
                <fullName>CV_Past_Due_Calls__c</fullName>
            </value>
            <value>
                <fullName>DLRS_CV_Expired_Calls__c</fullName>
            </value>
            <value>
                <fullName>DLRS_CV_Expiring_Calls__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>