unpackaged/main/default/objects/Outbound_Communications__c/fields/Call_Count_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Count_Number__c</fullName>
    <label>Call Count Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>