unpackaged/main/default/objects/Outbound_Communications__c/fields/Campaign_Partner_Filter__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Partner_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If set, this communication record will only be sent when the intake is related to this campaign partner</description>
    <inlineHelpText>If set, this communication record will only be sent when the intake is related to this campaign partner</inlineHelpText>
    <label>Campaign Partner Filter</label>
    <referenceTo>Campaign_Partner__c</referenceTo>
    <relationshipLabel>Outbound Communications</relationshipLabel>
    <relationshipName>Outbound_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>