unpackaged/main/default/objects/Outbound_Communications__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camp Lejeune</fullName>
            </value>
            <value>
                <fullName>Talcum Powder</fullName>
            </value>
            <value>
                <fullName>Tylenol</fullName>
            </value>
            <value>
                <fullName>Round Up</fullName>
            </value>
            <value>
                <fullName>NEC/Baby Formula</fullName>
            </value>
            <value>
                <fullName>Hair Relaxers</fullName>
            </value>
            <value>
                <fullName>Paraquat</fullName>
            </value>
            <value>
                <fullName>Meso/Asbestos</fullName>
            </value>
            <value>
                <fullName>Hernia Mesh</fullName>
            </value>
            <value>
                <fullName>Zantac</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>PFAS</fullName>
            </value>
            <value>
                <fullName>Legacy Talc</fullName>
                <isActive>false</isActive>
                <label>Legacy Talc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>