unpackaged/main/default/objects/Outbound_Communications__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <inlineHelpText>Comma-separated list of email values</inlineHelpText>
    <label>CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>