unpackaged/main/default/objects/Outbound_Communications__c/fields/Dwell_Time_Days_After_Date__c.field-meta.xml
<CustomField>
    <fullName>Dwell_Time_Days_After_Date__c</fullName>
    <description>This represents the number of days after the date field indicated in the Dwell Time Date field picklist.  This values is used to MATCH the already scheduled flow paths.  Chaning this value will not change the schedule.  The schedule must be changed in the corresponding flow</description>
    <inlineHelpText>This represents the number of days after the date field indicated in the Dwell Time Date field picklist.  This values is used to MATCH the already scheduled flow paths.  Chaning this value will not change the schedule.  The schedule must be changed in the corresponding flow</inlineHelpText>
    <label>Dwell Time Days After Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>