unpackaged/main/default/objects/Outbound_Communications__c/fields/Dwell_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Dwell_Time_Field__c</fullName>
    <label>Dwell Time Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>litify_pm__Retainer_Agreement_Sent_Date__c</fullName>
            </value>
            <value>
                <fullName>Date_3P_EOF_Started__c</fullName>
            </value>
            <value>
                <fullName>Referred_OutDate__c</fullName>
            </value>
            <value>
                <fullName>Date_3P_CV_Started__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>