unpackaged/main/default/objects/Outbound_Communications__c/fields/Email_From__c.field-meta.xml
<CustomField>
    <fullName>Email_From__c</fullName>
    <inlineHelpText>This must be an Org-Wide Email Address for a successful save. If this field is blank, the email will be sent from the current user&#39;s email.</inlineHelpText>
    <label>Email From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>