unpackaged/main/default/objects/Outbound_Communications__c/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <label>Email Template ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>