unpackaged/main/default/objects/Outbound_Communications__c/fields/Include_All_Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Include_All_Case_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this rule will apply to all case types</description>
    <inlineHelpText>If checked this rule will apply to all case types</inlineHelpText>
    <label>Include All Case Types</label>
    <type>Checkbox</type>
</CustomField>