unpackaged/main/default/objects/Outbound_Communications__c/fields/Include_All_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Include_All_Statuses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this rule will apply to all status values</description>
    <inlineHelpText>If checked this rule will apply to all status values</inlineHelpText>
    <label>Include All Statuses</label>
    <type>Checkbox</type>
</CustomField>