unpackaged/main/default/objects/Outbound_Communications__c/fields/Include_all_Sub_Statueses__c.field-meta.xml
<CustomField>
    <fullName>Include_all_Sub_Statueses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this rule will apply to all sub status values</description>
    <inlineHelpText>If checked this rule will apply to all sub status values</inlineHelpText>
    <label>Include all Sub Statueses</label>
    <type>Checkbox</type>
</CustomField>