unpackaged/main/default/objects/Outbound_Communications__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <label>Intake Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Retainer Agreement Sent</fullName>
            </value>
            <value>
                <fullName>Retainer Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Case Verification</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Turned Down</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>