unpackaged/main/default/objects/Outbound_Communications__c/fields/Intake_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Sub_Status__c</fullName>
    <description>Only send this communication when one of these sub status values match the intake in question.  If blank then sub status will not be checked</description>
    <inlineHelpText>Only send this communication when one of these sub status values match the intake in question.  If blank then sub status will not be checked</inlineHelpText>
    <label>Intake Sub-Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>External Party</fullName>
            </value>
            <value>
                <fullName>Error on File</fullName>
            </value>
            <value>
                <fullName>Third Party Error on File</fullName>
            </value>
            <value>
                <fullName>Non Responsive Clients</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Pending Rejection</fullName>
            </value>
            <value>
                <fullName>CV Past Due</fullName>
            </value>
            <value>
                <fullName>CV Expired</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Expiring</fullName>
            </value>
            <value>
                <fullName>Medical Records Inquiry</fullName>
            </value>
            <value>
                <fullName>Medical Records Past 30</fullName>
            </value>
            <value>
                <fullName>Unable To Reach 30+ Days</fullName>
            </value>
            <value>
                <fullName>Sent E-Sign by Mail</fullName>
            </value>
            <value>
                <fullName>Sent E-Sign NR Mass Text</fullName>
            </value>
            <value>
                <fullName>Waiting Attorney Call</fullName>
            </value>
            <value>
                <fullName>Does not have Signed Retainer Attached</fullName>
            </value>
            <value>
                <fullName>Scheduled Appointment</fullName>
            </value>
            <value>
                <fullName>Error on File Review</fullName>
            </value>
            <value>
                <fullName>Active Review</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Case Rejected</fullName>
            </value>
            <value>
                <fullName>Declined by firm</fullName>
            </value>
            <value>
                <fullName>CV Expiring</fullName>
            </value>
            <value>
                <fullName>Case Rejected - Dual Rep</fullName>
            </value>
            <value>
                <fullName>Case Rejected - Partner Firm Only</fullName>
            </value>
            <value>
                <fullName>Partner Firm Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>