unpackaged/main/default/objects/Outbound_Communications__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <label>Internal Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internal_Firm_Name</valueSetName>
    </valueSet>
</CustomField>