unpackaged/main/default/objects/Outbound_Communications__c/fields/Last_Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Result__c</fullName>
    <label>Last Call Result</label>
    <length>75</length>
    <type>Text</type>
</CustomField>