unpackaged/main/default/objects/Outbound_Communications__c/fields/Open_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Open_Email_Template__c</fullName>
    <description>Hyperlink to email template record</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Email_Template_ID__c, &quot;Template Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hyperlink to email template record</inlineHelpText>
    <label>Open Email Template</label>
    <type>Text</type>
</CustomField>