unpackaged/main/default/objects/Outbound_Communications__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Lead Owner</fullName>
            </value>
            <value>
                <fullName>Intake Team</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Caller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>