unpackaged/main/default/objects/Outbound_Communications__c/fields/SMS_Message_to_Client__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message_to_Client__c</fullName>
    <description>The following tokens are supported: &lt;&lt;Lead First Name&gt;&gt;, &lt;&lt;Client First Name&gt;&gt;, &lt;&lt;Caller First Name&gt;&gt;, &lt;&lt;Case Type&gt;&gt;</description>
    <inlineHelpText>The following tokens are supported: &lt;&lt;Lead First Name&gt;&gt;, &lt;&lt;Client First Name&gt;&gt;, &lt;&lt;Caller First Name&gt;&gt;, &lt;&lt;Case Type&gt;&gt;</inlineHelpText>
    <label>SMS Message to Client</label>
    <type>TextArea</type>
</CustomField>