unpackaged/main/default/objects/Outbound_Communications__c/fields/Update_Notes__c.field-meta.xml
<CustomField>
    <fullName>Update_Notes__c</fullName>
    <description>Notes detailing why updates were made to this outbound comm record</description>
    <inlineHelpText>Notes detailing why updates were made to this outbound comm record</inlineHelpText>
    <label>Update Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>