unpackaged/main/default/objects/Outbound_Communications__c/recordTypes/Call_Count.recordType-meta.xml
<RecordType>
    <fullName>Call_Count</fullName>
    <active>true</active>
    <label>Call Count</label>
</RecordType>