unpackaged/main/default/objects/Outbound_Communications__c/recordTypes/Dwell_Time.recordType-meta.xml
<RecordType>
    <fullName>Dwell_Time</fullName>
    <active>true</active>
    <label>Dwell Time</label>
</RecordType>