unpackaged/main/default/objects/Outbound_Communications__c/recordTypes/Status.recordType-meta.xml
<RecordType>
    <fullName>Status</fullName>
    <active>true</active>
    <label>Status</label>
</RecordType>