unpackaged/main/default/objects/Outbound_Communications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Update_Notes__c</columns>
    <columns>Recipient__c</columns>
    <columns>CC__c</columns>
    <columns>BCC__c</columns>
    <columns>Include_All_Case_Types__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Include_All_Statuses__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Include_all_Sub_Statueses__c</columns>
    <columns>Intake_Sub_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Open_Email_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>