unpackaged/main/default/objects/Outbound_Communications__c/listViews/All_Call_Count_Records.listView-meta.xml
<ListView>
    <fullName>All_Call_Count_Records</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Active_For_Testing__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Call_Count_Number__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Open_Email_Template__c</columns>
    <columns>Call_Count_API_Name__c</columns>
    <columns>Recipient__c</columns>
    <columns>BCC__c</columns>
    <columns>CC__c</columns>
    <columns>SMS_Message_to_Client__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Intake_Sub_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Outbound_Communications__c.Call_Count</value>
    </filters>
    <label>All Call Count Records</label>
</ListView>