unpackaged/main/default/objects/Outbound_Communications__c/listViews/Call_Count.listView-meta.xml
<ListView>
    <fullName>Call_Count</fullName>
    <columns>NAME</columns>
    <columns>Call_Count_Number__c</columns>
    <columns>Active__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>SMS_Message_to_Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Call Count</value>
    </filters>
    <label>Call Count</label>
</ListView>