unpackaged/main/default/objects/Outbound_Communications__c/listViews/Created_for_OC_Update_DR_VP.listView-meta.xml
<ListView>
    <fullName>Created_for_OC_Update_DR_VP</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Active_For_Testing__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Intake_Status__c</columns>
    <columns>Intake_Sub_Status__c</columns>
    <columns>Dwell_Time_Field__c</columns>
    <columns>Dwell_Time_Days_After_Date__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Open_Email_Template__c</columns>
    <columns>BCC__c</columns>
    <columns>CC__c</columns>
    <columns>SMS_Message_to_Client__c</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/20/2024 12:00 AM</value>
    </filters>
    <label>Created for OC Update - DR &amp; VP</label>
</ListView>