unpackaged/main/default/objects/Outbound_Communications__c/listViews/Mail_Retainer_Calls.listView-meta.xml
<ListView>
    <fullName>Mail_Retainer_Calls</fullName>
    <columns>NAME</columns>
    <columns>Call_Count_Number__c</columns>
    <columns>Active__c</columns>
    <columns>Active_For_Testing__c</columns>
    <columns>Call_Count_API_Name__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Last_Call_Result__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Mail_Retainer_Sent_Calls__c</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Outbound_Communications__c.Call_Count</value>
    </filters>
    <label>Mail Retainer Calls</label>
</ListView>