unpackaged/main/default/objects/Outbound_Communications__c/listViews/Status.listView-meta.xml
<ListView>
    <fullName>Status</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Active_For_Testing__c</columns>
    <columns>CC__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Intake_Sub_Status__c</columns>
    <columns>SMS_Message_to_Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Status</value>
    </filters>
    <label>Status</label>
</ListView>