unpackaged/main/default/objects/Outbound_Communications__c/listViews/Status_Active.listView-meta.xml
<ListView>
    <fullName>Status_Active</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Active_For_Testing__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Include_All_Statuses__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Include_all_Sub_Statueses__c</columns>
    <columns>Intake_Sub_Status__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>SMS_Message_to_Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Status</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Status - Active</label>
</ListView>