unpackaged/main/default/objects/Outbound_Communications__c/listViews/Status_CV.listView-meta.xml
<ListView>
    <fullName>Status_CV</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Active_For_Testing__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Intake_Sub_Status__c</columns>
    <columns>SMS_Message_to_Client__c</columns>
    <columns>Recipient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Status</value>
    </filters>
    <filters>
        <field>Intake_Status__c</field>
        <operation>equals</operation>
        <value>Case Verification</value>
    </filters>
    <label>Status - CV</label>
</ListView>