unpackaged/main/default/objects/Outbound_Communications__c/listViews/Status_Records.listView-meta.xml
<ListView>
    <fullName>Status_Records</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Active_For_Testing__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Intake_Sub_Status__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Open_Email_Template__c</columns>
    <columns>Last_Call_Result__c</columns>
    <columns>Recipient__c</columns>
    <columns>BCC__c</columns>
    <columns>CC__c</columns>
    <columns>SMS_Message_to_Client__c</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Outbound_Communications__c.Status</value>
    </filters>
    <label>Status Records</label>
</ListView>